- API method for saving new ensemblers - Integration test to test the unmarshalling of the payload into one of ensembler concrete structs - Updates to openapi spec
